# babydex

./: .gitignore  Cargo.toml  biome.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
api/: .babelrc  .dockerignore  .env.example  .gitignore  Dockerfile  README.md  SPECIFICATION.md  drizzle.config.ts  package.json  pnpm-lock.yaml  tsconfig.json  tsup.config.ts
api/@schemas/: assetlist.schema.json
api/@types/: assetlist.d.ts  index.d.ts
api/drizzle/: relations.ts  schema.ts
api/schema/: drizzle.config.ts
api/src/: server.ts
babydex-dashboard/: .env.example  Cargo.toml  Shuttle.toml
babydex-dashboard/src/: main.rs
babydex-dashboard/templates/: index.html.tera
e2e_testing/: basic_scenario.ts  codegen.ts  config.json  contracts.json  deploy.ts  deployed.json  lib.ts
e2e_testing/bbn-testnet/: add_cw20_liquidity.ts  add_liquidity.ts  add_liquidity_all.ts  add_liquidity_xyk.ts  contracts.json  deploy_param_pools.ts  deployed.json  incentives_all_pools.ts  insert_contracts.ts  pool_deploy.ts  single_pool_deploy.ts  store_and_migrate.ts  swap.ts  tokens.json  update_pool_fees.ts  withdraw_liquidity.ts
e2e_testing/mainnet/: assets.ts  config.json  contracts.json  deploy_dex.ts  deployed.json  insert_contracts.ts  lib.ts  lp_and_swap.ts  pcl_params.ts  (+4 more)
frontend/: package.json  tsconfig.json
indexer/: .env.example  .env.testing  README.md  drizzle.config.ts  global.d.ts  package.json  tsconfig.json
tower-faucet/: package-lock.json  package.json
trpc/: drizzle.config.ts  fs-polyfill.js  package.json  tsconfig.json
types/: tsconfig.json
(+311 files in other folders)
