[package]
name = "babydex-dashboard"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", features = ["macros"] }
shuttle-axum = "0.53.0"
shuttle-runtime = "0.53.0"
tokio = "1.28.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tera = "1.20.0"
tower-http = { version = "0.6.2", features = ["fs"] }
reqwest = "0.12.15"
